--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 
 .backgroundimg{
-  background-image: url(./bordr.jpg);
+  background-image: url(./src/bordr.jpg);
   background-repeat: no-repeat;
   background-size: 1000px 700px;
   
