--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,86 @@
 
 
 .backgroundimg{
-  background-image: url(./bordr.jpg);
+  background-image: url('./greenimg.jpg');
   background-repeat: no-repeat;
   background-size: 1000px 700px;
   
 }
+/* for expenssive tutoril */
+.sub_container{
+  max-width: 400px;
+  min-height: 450px;
+  margin: 0 auto;
+  background-color: white;
+  box-shadow: 0 0 10px gray;
+  margin-top:  50px;
+  padding: 15px 50px; 
+  scroll-snap-align: left;
+}
+.money {
+  font-size: 20px;
+  letter-spacing: 1px;
+  margin: 5px 0;
+}
+
+.money.plus {
+  color: #2ecc71;
+}
+
+.money.minus {
+  color: #c0392b;
+}
+
+.btn:focus,
+.delete-btn:focus {
+  outline: 0;
+}
+
+.list {
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 40px;
+}
+
+.list li {
+  background-color: #fff;
+  box-shadow: var(--box-shadow);
+  color: #333;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  padding: 10px;
+  margin: 10px 0;
+}
+
+.list li.plus {
+  border-right: 5px solid #2ecc71;
+}
+
+.list li.minus {
+  border-right: 5px solid #c0392b;
+}
+
+.delete-btn {
+  cursor: pointer;
+  background-color: #e74c3c;
+  border: 0;
+  color: #fff;
+  font-size: 20px;
+  line-height: 20px;
+  padding: 2px 5px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translate(-100%, -50%);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.list li:hover .delete-btn {
+  opacity: 1;
+}
+/* end of that section */
 html {
   scroll-behavior: auto;
 }
